--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     ext {
+        // version export settings
+        dist_version = "1.2.1"
+
         // lang
         version_target_jvm = 17
         version_kotlin = "1.6.10"
@@ -7,7 +10,7 @@ buildscript {
         version_jsr305 = "3.0.2"
 
         // Testing & Code quality
-        version_junit5 = "5.8.2"
+        version_junit5 = "5.9.0"
         version_detekt = "1.19.0"
         version_jacoco = "0.8.7"
         version_hamcrest = "2.2"
