--- a/sirloin-jvmlib-text/build.gradle
+++ b/sirloin-jvmlib-text/build.gradle
@@ -1,4 +1,4 @@
-version "1.2.0"
+version dist_version
 
 apply from: "${project.rootDir}/gradle/scripts/mavenPublishing.gradle"
 
@@ -10,5 +10,5 @@ dependencies {
     implementation("com.vdurmont:emoji-java:5.1.1") {
         exclude group: "org.json", module: "json"
     }
-    implementation "org.json:json:20220320"
+    implementation "org.json:json:20220924"
 }
