--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
         // version export settings
-        dist_version = "1.2.9"
+        dist_version = "1.2.11"
 
         // lang
         version_target_jvm = 17
         version_kotlin = "1.8.0"
-        version_javax_validation = "2.0.1.Final"
-        version_jsr305 = "3.0.2"
+        version_jakarta_validation = "3.0.2"
+        version_jakarta_annotation = "2.1.1"
 
         // Testing & Code quality
         version_junit5 = "5.9.0"
@@ -49,10 +49,5 @@ allprojects {
 
     jar {
         enabled = true
-    }
-
-    dependencies {
-        // JSR 305: Annotations for Software Defect Detection
-        compileOnly "com.google.code.findbugs:jsr305:$version_jsr305"
     }
 }
