--- a/gradle/scripts/java.gradle
+++ b/gradle/scripts/java.gradle
@@ -20,6 +20,7 @@ artifacts {
 }
 
 dependencies {
-    // JSR 303: Bean validation
-    implementation "javax.validation:validation-api:$version_javax_validation"
+    compileOnly "jakarta.validation:jakarta.validation-api:$version_jakarta_validation"
+
+    compileOnly "jakarta.annotation:jakarta.annotation-api:$version_jakarta_annotation"
 }
