--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
         // version export settings
-        dist_version = "1.2.11-fix1"
+        dist_version = "1.2.12"
 
         // lang
         version_target_jvm = 17
-        version_kotlin = "1.8.0"
+        version_kotlin = "1.9.0"
         version_jakarta_validation = "3.0.2"
         version_jakarta_annotation = "2.1.1"
 
